fix rxCollapse

--- a/src/components/rxCollapse/rxCollapse.less
+++ b/src/components/rxCollapse/rxCollapse.less
@@ -1,14 +1,13 @@
 rx-collapse {
   display: block;
-}
 
-rx-metadata rx-collapse {
-  .rs-detail-section-body {
-    margin: 0;
-    padding: 0;
+  .collapse-title-wrap {
+    font-size: 16px;
+    padding: 5px;
   }
 
-  .rs-facet-section-toggle {
-    margin-left: 60px;
+  .rx-collapse-title {
+    display: inline-block;
+    padding-right: 5px;
   }
 }
